--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
-			<version>2.4.4</version> <!-- Verifique a versão mais recente no Maven Central -->
+			<version>3.1.1</version> <!-- Verifique a versão mais recente no Maven Central -->
 		</dependency>
 
 		<dependency>
@@ -91,6 +91,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.tngtech.archunit</groupId>
+			<artifactId>archunit-junit5</artifactId>
+			<version>1.0.1</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
